--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
 
 snack-bar-container.success-snack-bar{
     // padding: 20px;
-    background-color: #e4912c;
+    background-color: #38d39f;
     color: white;
     .mat-button-wrapper {
         color: white !important;
